# nyxtext-zenith

./: .deepsource.toml  .flake8  .gitignore  Nyxtext.py  README.md  SECURITY.md  mypy.ini  pyproject.toml  requirements.txt  windows-build.bat
.github/: ABOUT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  dependabot.yml
.github/workflows/: BuildShip_ONEFILE.yml  BuildShip_STANDALONE.yml  Build_and_Ship.yml
zenith/: __main__.py  color_schemes.lua  config.lua  shortcuts.json  shortcuts.lua  zenith_core.py
zenith/colors/: dusk_dark.lua  gruvbox_dark.lua  tokyonight_storm.lua
zenith/components/: codeSpace.py  rightSideBar.py  tabTopbar.py  terminal.py  workSpace.py
zenith/core/: customFileSystemModel.py  zenith_core.py
zenith/core/func/: fileWorker.py  openDaemon.py  saveDaemon.py
zenith/core/langFeatures/: language_features.py  lua_support.py  python_features.py  python_support.py
zenith/framework/: fileTree.py  intMenuBar.py  lexer_manager.py  statusBar.py  titleBar.py
zenith/lexers/: bash_lexer.py  batch_lexer.py  cmake_lexer.py  cpp_lexer.py  css_lexer.py  html_lexer.py  java_lexer.py  javascript_lexer.py  json_lexer.py  lua_lexer.py  markdown_lexer.py  md_lexer.py  perl_lexer.py  properties_lexer.py  python_lexer.py  ruby_lexer.py  sql_lexer.py  xml_lexer.py  yaml_lexer.py
zenith/media/: icon_resources.py
zenith/scripts/: shortcuts.py
