[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.svn
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[project]
name = "nyxtext-zenith"
version = "0.0.1"
description = "The Zenith of Text Processing for NyxText"
authors = [{name="Parazeeknova", email="yesh8harsh@gmail.com"}]
readme = ".github/README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers, End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Desktop Applications :: Text Editors :: Integrated Development Environments (IDE)",
]
keywords = ["nyxtext", "zenith", "IDE", "text-editor", "nyxtext-zenith"]
dependencies = [
    "PyQt6",
    "PyQt6-QScintilla",
    "lupa",
]
